gke-autopilot-hpa/build/hello-app-example.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-app
    spec:
      containers:
      - name: hello-app
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 25
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
spec:
  selector:
    app.kubernetes.io/name: hello-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: hello-app-lb-ip
    kubernetes.io/ingress.class: "gce"
    # Uncomment the line below if you want to create a Google-managed certificate
    # networking.gke.io/managed-certificates: hello-app-managed-cert
spec:
  defaultBackend:
    service:
      name: hello-app-service
      port:
        number: 80
---
# Uncomment the lines below to create a Google-managed certificate
# apiVersion: networking.gke.io/v1
# kind: ManagedCertificate
# metadata:
#   name: hello-app-managed-cert
# spec:
#   domains:
#     - helloapp.<YOUR DOMAIN>
